DEN-51 Harden BFF errors and request coalescing
